--- a/index.html
+++ b/index.html
@@ -34,8 +34,51 @@
     </header>
     <main>
         <section class="about">
-            <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+             <h3 class="section-title">About Me</h3>
+             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+             <div class="about-info-container">
+                <div class="about-info">
+                    <P class="info-title">Name.</P>
+                    <p class="info-description">Mary Hardy</p>
+                </div>
+                <div class="about-info">
+                    <P class="info-title">Email</P>
+                    <p class="info-description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <P class="info-title">Date of Birth</P>
+                    <p class="info-description">11 November 1987</p>
+                </div>
+                <div class="about-info">
+                    <P class="info-title">Form</P>
+                    <p class="info-description">Los Angelas, USA</p>
+                </div>
+             </div>
+        </section>
+        <section class="what-i-do">
+             <h3 class="section-title">What I Do</h3>
+             <div class="skils-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla Javascript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quas adipisci soluta consectetur tempore sint.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">Recat</p>
+                    <p class="skill-description">Impedit corporis molestiae laborum natus rem soluta nostrum odio quam amet eius. Quia, obcaecati commodi?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.Js</p>
+                    <p class="skill-description">Harum qui dicta iusto vitae veritatis earum corporis tenetur fugiat, iste animi ipsum ut labore!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">Possimus dicta magnam dolorum? Temporibus mollitia ipsa labore aliquid eligendi soluta debitis vel placeat enim?</p>
+                </div>
+             </div>
         </section>
     </main>
     <footer>
