--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
                 </div>
              </div>
         </section>
+        <section class="resume">
+            <h3 class="section-title">A Summary of My Resume</h3>
+            <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
